--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
 <resources>
     <dimen name="margin_general">16dp</dimen>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_tiny">4dp</dimen>
+
+    <dimen name="text_size_title">20sp</dimen>
+    <dimen name="text_size_general">16sp</dimen>
+    <dimen name="text_size_secondary">12sp</dimen>
+
+    <dimen name="card_elevation">2dp</dimen>
+    <dimen name="card_corners">4dp</dimen>
 </resources>
