--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -2,8 +2,6 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data class="ItemProgressBinding" />
-
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,5 +10,7 @@
         android:indeterminateTintMode="src_atop"
         android:paddingTop="@dimen/margin_small"
         android:paddingBottom="@dimen/margin_small" />
+
+    <data />
 
 </layout>
