--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -5,15 +5,16 @@
     xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/movieDetailsPoster"
                 android:layout_width="100dp"
                 android:layout_height="150dp"
@@ -31,7 +32,7 @@
                 bind:selectable_ripple="@{true}"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,13 +47,15 @@
                 android:text="@{data.details.type == MovieType.SERIES ? @string/omdb_type_series : @string/omdb_type_movie}"
                 android:textColor="@color/accent"
                 android:textSize="@dimen/text_size_title"
-                app:layout_constraintEnd_toStartOf="@+id/movieDetailsYear"
+                app:layout_constraintEnd_toStartOf="@id/movieDetailsYear"
                 app:layout_constraintStart_toEndOf="@id/movieDetailsPoster"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintVertical_chainStyle="packed"
                 bind:gone_if_null="@{data.details.type}"
                 tools:text="Movie" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsYear"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -67,12 +70,12 @@
                 android:textSize="@dimen/text_size_title"
                 app:layout_constraintBottom_toBottomOf="@id/movieDetailsType"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/movieDetailsType"
-                app:layout_constraintTop_toTopOf="@+id/movieDetailsType"
+                app:layout_constraintStart_toEndOf="@id/movieDetailsType"
+                app:layout_constraintTop_toTopOf="@id/movieDetailsType"
                 bind:gone_if_null_or_blank="@{data.details.year}"
                 tools:text="@tools:sample/date/ddmmyy" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsDescription"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -87,11 +90,12 @@
                 android:textSize="@dimen/text_size_general"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/movieDetailsPoster"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsType"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsType"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.description}"
                 tools:text="@tools:sample/lorem/random" />
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/movieDetailsRatingStar"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -104,7 +108,7 @@
                 app:tint="@color/primary"
                 bind:gone_if_null_or_blank="@{data.details.rating}" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsRating"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -121,11 +125,12 @@
                 android:textSize="@dimen/text_size_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/movieDetailsRatingStar"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsDescription"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsDescription"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.rating}"
                 tools:text="7.3/10" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsVotes"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -140,7 +145,8 @@
                 android:textSize="@dimen/text_size_secondary"
                 app:layout_constraintEnd_toEndOf="@id/movieDetailsRating"
                 app:layout_constraintStart_toStartOf="@id/movieDetailsRating"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsRating"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsRating"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.votes}"
                 tools:text="7353" />
 
@@ -151,9 +157,10 @@
                 app:barrierDirection="bottom"
                 app:constraint_referenced_ids="movieDetailsPoster,movieDetailsVotes"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintVertical_bias="0" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsDirector"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -168,12 +175,13 @@
                 android:textSize="@dimen/text_size_general"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsBarrier"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsBarrier"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.director}"
                 bind:html_text="@{@string/movie_details_director(data.details.director)}"
                 tools:text="@tools:sample/lorem/random" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsWriters"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -185,12 +193,13 @@
                 android:textSize="@dimen/text_size_general"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsDirector"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsDirector"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.writers}"
                 bind:html_text="@{@string/movie_details_writer(data.details.writers)}"
                 tools:text="@tools:sample/lorem/random" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsActors"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -202,12 +211,13 @@
                 android:textSize="@dimen/text_size_general"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsWriters"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsWriters"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.actors}"
                 bind:html_text="@{@string/movie_details_actors(data.details.actors)}"
                 tools:text="@tools:sample/lorem/random" />
 
-            <androidx.appcompat.widget.AppCompatTextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/movieDetailsPlot"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -221,13 +231,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/movieDetailsActors"
+                app:layout_constraintTop_toBottomOf="@id/movieDetailsActors"
+                app:layout_constraintVertical_bias="0"
                 bind:gone_if_null_or_blank="@{data.details.plot}"
+                tools:maxLines="3"
                 tools:text="@tools:sample/lorem/random" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <data>
 
